main/default/objects/Facility__c/fields/Accord_Lead__c.field-meta.xml
<CustomField>
    <fullName>Accord_Lead__c</fullName>
    <description>Accord Lead</description>
    <inlineHelpText>Accord Lead</inlineHelpText>
    <label>Accord Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>