main/default/objects/Facility__c/fields/Authorized_Subcontracting__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Subcontracting__c</fullName>
    <description>Authorized Contracting</description>
    <inlineHelpText>Authorized Contracting</inlineHelpText>
    <label>Authorized Subcontracting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>