main/default/objects/Facility__c/fields/Bribery__c.field-meta.xml
<CustomField>
    <fullName>Bribery__c</fullName>
    <description>Bribery</description>
    <inlineHelpText>Bribery</inlineHelpText>
    <label>Bribery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>