main/default/objects/Facility__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact</description>
    <inlineHelpText>Contact</inlineHelpText>
    <label>Contact</label>
    <length>35</length>
    <type>Text</type>
</CustomField>