main/default/objects/Facility__c/fields/Document_Reference__c.field-meta.xml
<CustomField>
    <fullName>Document_Reference__c</fullName>
    <description>Document Reference</description>
    <inlineHelpText>Document Reference</inlineHelpText>
    <label>Document Reference</label>
    <type>Url</type>
</CustomField>