main/default/objects/Facility__c/fields/Engineering_audit_completed__c.field-meta.xml
<CustomField>
    <fullName>Engineering_audit_completed__c</fullName>
    <formula>AND(ISPICKVAL(Engineering_Audit_Requested__c  , "Yes"),

AND(NOT(ISBLANK(TEXT( Electrical_Safety_Audit__c ))),
NOT(ISBLANK(TEXT(  Structural_Audit__c  ))),
NOT(ISBLANK(TEXT(   Other_Audits__c   ))),
NOT(ISBLANK(TEXT(   Fire_Safety_Audit__c   )))),

ISPICKVAL(  Facility_Status__c  ,"Active"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engineering audit completed</label>
    <type>Checkbox</type>
</CustomField>