main/default/objects/Facility__c/fields/Engineering_Audit_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Audit_Not_Completed__c</fullName>
    <description>Engineering Audit not completed</description>
    <formula>AND(

ISPICKVAL( Engineering_Audit_Requested__c  , "YES") ,


OR(ISBLANK(TEXT( Electrical_Safety_Audit__c )),
ISBLANK(TEXT(  Structural_Audit__c  )),
ISBLANK(TEXT(   Other_Audits__c   )),
ISBLANK(TEXT(  Fire_Safety_Audit__c  ))),


 OR(ISPICKVAL( Facility_Status__c ,"Active") ,
ISPICKVAL( Facility_Status__c ,"Manual Accept Shipments")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Factory Status = ACTIVE  and
Engineering Audit Requested = Yes and
Structural or Fire Safety or Electrical = Blank</inlineHelpText>
    <label>Engineering Audit Not Completed</label>
    <type>Checkbox</type>
</CustomField>