main/default/objects/Facility__c/fields/Engineering_Audit_Not_Requested__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Audit_Not_Requested__c</fullName>
    <description>Engineering Audit not requested</description>
    <formula>AND(
OR(ISBLANK(TEXT( Engineering_Audit_Requested__c )),
ISPICKVAL( Engineering_Audit_Requested__c  , "No")) ,
 OR(ISPICKVAL( Facility_Status__c ,"Active") ,
ISPICKVAL( Facility_Status__c ,"Manual Accept Shipments")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Factory Status = ACTIVE or MANUAL ACCEPT SHIPMENTS and
Engineering Audit Requested = NO or BLANK</inlineHelpText>
    <label>Engineering Audit Not Requested</label>
    <type>Checkbox</type>
</CustomField>