main/default/objects/Facility__c/fields/Engineering_Audit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Audit_Requested__c</fullName>
    <description>Engineering Audit Requested</description>
    <inlineHelpText>Engineering Audit Requested</inlineHelpText>
    <label>Engineering Audit Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>