main/default/objects/Facility__c/fields/Facility_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_2__c</fullName>
    <description>Facility Name 2</description>
    <inlineHelpText>Facility Name 2</inlineHelpText>
    <label>Facility Name 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>