main/default/objects/Facility__c/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <description>Facility Number</description>
    <displayFormat>{0000000}</displayFormat>
    <inlineHelpText>Facility Number</inlineHelpText>
    <label>Facility Number</label>
    <type>AutoNumber</type>
</CustomField>