main/default/objects/Facility__c/fields/Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Facility_Status__c</fullName>
    <description>Facility Status</description>
    <inlineHelpText>Facility Status</inlineHelpText>
    <label>Facility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Delisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>