main/default/objects/Facility__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <formula>IF( No_of_Audits_with_Findings__c  > 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked when # of audits with findings > 0</inlineHelpText>
    <label>Findings</label>
    <type>Checkbox</type>
</CustomField>