main/default/objects/Facility__c/fields/Fire_Safety_Audit__c.field-meta.xml
<CustomField>
    <fullName>Fire_Safety_Audit__c</fullName>
    <description>Fire Safety Audit</description>
    <inlineHelpText>Fire Safety Audit</inlineHelpText>
    <label>Fire Safety Audit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Engineering_Audit_Requested__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>