main/default/objects/Facility__c/fields/FS_Audit_Required__c.field-meta.xml
<CustomField>
    <fullName>FS_Audit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FS Audit Required</description>
    <inlineHelpText>FS Audit Required</inlineHelpText>
    <label>FS Audit Required</label>
    <type>Checkbox</type>
</CustomField>