main/default/objects/Facility__c/fields/FS_CAPA_Completed__c.field-meta.xml
<CustomField>
    <fullName>FS_CAPA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FS CAPA Completed</description>
    <inlineHelpText>Audit Group  = FS FOLLOW UP and
Factory Status  = ACTIVE  and
Audit Date = NOT BLANK and
FS Audit Required = NOT BLANK</inlineHelpText>
    <label>FS CAPA Completed</label>
    <type>Checkbox</type>
</CustomField>