main/default/objects/Facility__c/fields/FS_CAPA_Not_Requested__c.field-meta.xml
<CustomField>
    <fullName>FS_CAPA_Not_Requested__c</fullName>
    <formula>AND(   Pending_CAPA_FS__c   = FALSE ,
   Past_CAPA_Deadline_FS__c    = FALSE,
              FS_CAPA_Completed__c    = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS CAPA Not Requested</label>
    <type>Checkbox</type>
</CustomField>