main/default/objects/Facility__c/fields/FS_Compliant__c.field-meta.xml
<CustomField>
    <fullName>FS_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FS Compliant</description>
    <inlineHelpText>Audit Group = PERIODIC FS and
Factory Status = ACTIVE and
FS Audit Required = NOT BLANK and
Audit Date  >= TODAY()-365*3</inlineHelpText>
    <label>FS Compliant</label>
    <type>Checkbox</type>
</CustomField>