main/default/objects/Facility__c/fields/FS_Due_for_new_listing__c.field-meta.xml
<CustomField>
    <fullName>FS_Due_for_new_listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FS Due for new listing</description>
    <inlineHelpText>Audit Group = PERIODIC FS and
Factory Status = ACTIVE and
Audit Date = BLANK and
FS Audit Required = NOT BLANK</inlineHelpText>
    <label>FS Due for new listing</label>
    <type>Checkbox</type>
</CustomField>