main/default/objects/Facility__c/fields/FS_Green_list_criteria__c.field-meta.xml
<CustomField>
    <fullName>FS_Green_list_criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FS Green list criteria</description>
    <inlineHelpText>FS Green list criteria</inlineHelpText>
    <label>FS Green list criteria</label>
    <type>Checkbox</type>
</CustomField>