main/default/objects/Facility__c/fields/FS_Required_country__c.field-meta.xml
<CustomField>
    <fullName>FS_Required_country__c</fullName>
    <description>FS Required country</description>
    <inlineHelpText>FS Required country</inlineHelpText>
    <label>FS Required Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>