main/default/objects/Facility__c/fields/FS_Training_cost__c.field-meta.xml
<CustomField>
    <fullName>FS_Training_cost__c</fullName>
    <description>FS Training cost</description>
    <inlineHelpText>FS Training cost</inlineHelpText>
    <label>FS Training cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>