main/default/objects/Facility__c/fields/FS_Training_date__c.field-meta.xml
<CustomField>
    <fullName>FS_Training_date__c</fullName>
    <description>FS Training date</description>
    <inlineHelpText>FS Training date</inlineHelpText>
    <label>FS Training date</label>
    <type>Date</type>
</CustomField>