main/default/objects/Facility__c/fields/FS_Training_request__c.field-meta.xml
<CustomField>
    <fullName>FS_Training_request__c</fullName>
    <description>FS Training request</description>
    <inlineHelpText>FS Training request</inlineHelpText>
    <label>FS Training request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>