main/default/objects/Facility__c/fields/FS_Traning_invoice__c.field-meta.xml
<CustomField>
    <fullName>FS_Traning_invoice__c</fullName>
    <description>FS Training invoice</description>
    <inlineHelpText>FS Training invoice</inlineHelpText>
    <label>FS Training invoice</label>
    <length>30</length>
    <type>Text</type>
</CustomField>