main/default/objects/Facility__c/fields/Google_Maps__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps__c</fullName>
    <formula>HYPERLINK("https://maps.google.com/maps?q=" &amp; Address_Line_1__c &amp; ',+' &amp; City__c &amp; ',+' &amp; RegionName__c &amp; ',+' &amp; CountryName__c,"Click to Plot on Maps")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Maps</label>
    <type>Text</type>
</CustomField>