main/default/objects/Facility__c/fields/Green_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Green_List_Status__c</fullName>
    <description>Green List Status</description>
    <inlineHelpText>Green List Status</inlineHelpText>
    <label>Green List Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>