main/default/objects/Facility__c/fields/Latest_Annual_WCA_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Annual_WCA_Date__c</fullName>
    <description>Latest Annual WCA Date</description>
    <inlineHelpText>Latest Annual WCA Date</inlineHelpText>
    <label>Latest Annual WCA Date</label>
    <type>Date</type>
</CustomField>