main/default/objects/Facility__c/fields/Latest_FS_CAPA_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_FS_CAPA_Date__c</fullName>
    <description>Latest FS CAPA Date</description>
    <inlineHelpText>Latest FS CAPA Date</inlineHelpText>
    <label>Latest FS CAPA Date</label>
    <type>Date</type>
</CustomField>