main/default/objects/Facility__c/fields/Latest_On_Site_Investigation_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_On_Site_Investigation_Date__c</fullName>
    <description>Latest On Site Investigation Date</description>
    <inlineHelpText>Latest On Site Investigation Date</inlineHelpText>
    <label>Latest On Site Investigation Date</label>
    <type>Date</type>
</CustomField>