main/default/objects/Facility__c/fields/Latest_Periodic_FS_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Periodic_FS_Date__c</fullName>
    <description>Latest Periodic FS Date</description>
    <inlineHelpText>Latest Periodic FS Date</inlineHelpText>
    <label>Latest Periodic FS Date</label>
    <type>Date</type>
</CustomField>