main/default/objects/Facility__c/fields/Latest_WCA_CAPA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_WCA_CAPA_Due_Date__c</fullName>
    <description>Latest WCA CAPA Due Date</description>
    <inlineHelpText>Latest WCA CAPA Due Date</inlineHelpText>
    <label>Latest WCA CAPA Due Date</label>
    <type>Date</type>
</CustomField>