main/default/objects/Facility__c/fields/Main_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Main_Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Main Product Group</description>
    <inlineHelpText>Main Product Group</inlineHelpText>
    <label>Main Product Group</label>
    <referenceTo>Product_Group__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>