main/default/objects/Facility__c/fields/Multi_Purpose_Building__c.field-meta.xml
<CustomField>
    <fullName>Multi_Purpose_Building__c</fullName>
    <description>Multi Purpose Building</description>
    <inlineHelpText>Multi Purpose Building</inlineHelpText>
    <label>Multi Purpose Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>