main/default/objects/Facility__c/fields/No_Findings__c.field-meta.xml
<CustomField>
    <fullName>No_Findings__c</fullName>
    <description>Check if number of audits with findings = 0</description>
    <formula>IF( No_of_Audits_with_Findings__c =0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check if number of audits with findings = 0</inlineHelpText>
    <label>No Findings</label>
    <type>Checkbox</type>
</CustomField>