main/default/objects/Facility__c/fields/No_of_A_Findings__c.field-meta.xml
<CustomField>
    <fullName>No_of_A_Findings__c</fullName>
    <description>Number of A Findings</description>
    <inlineHelpText>Number of A Findings</inlineHelpText>
    <label>No of A Findings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>