main/default/objects/Facility__c/fields/No_of_Audits__c.field-meta.xml
<CustomField>
    <fullName>No_of_Audits__c</fullName>
    <description>Number of Audits</description>
    <inlineHelpText>Number of Audits</inlineHelpText>
    <label>No of Audits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>