main/default/objects/Facility__c/fields/No_of_Audits_with_Findings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Audits_with_Findings__c</fullName>
    <description>Number of audits with findings</description>
    <inlineHelpText>Number of audits with findings</inlineHelpText>
    <label>No of Audits with Findings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>