main/default/objects/Facility__c/fields/No_of_B1_Findings__c.field-meta.xml
<CustomField>
    <fullName>No_of_B1_Findings__c</fullName>
    <description>Number of B1 findings</description>
    <inlineHelpText>Number of B1 findings</inlineHelpText>
    <label>No of B1 Findings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>