main/default/objects/Facility__c/fields/No_of_B2_Findings__c.field-meta.xml
<CustomField>
    <fullName>No_of_B2_Findings__c</fullName>
    <description>Number of B2 Findings</description>
    <inlineHelpText>Number of B2 Findings</inlineHelpText>
    <label>No of B2 Findings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>