main/default/objects/Facility__c/fields/No_of_buildings_belong_to_facility__c.field-meta.xml
<CustomField>
    <fullName>No_of_buildings_belong_to_facility__c</fullName>
    <description>Number of buildings belong to facility</description>
    <inlineHelpText>Number of buildings belong to facility</inlineHelpText>
    <label>No of buildings belong to facility</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>