main/default/objects/Facility__c/fields/No_of_floors_in_each_building__c.field-meta.xml
<CustomField>
    <fullName>No_of_floors_in_each_building__c</fullName>
    <description>Number of floors in each building</description>
    <inlineHelpText>Number of floors in each building</inlineHelpText>
    <label>No of floors in each building</label>
    <length>20</length>
    <type>Text</type>
</CustomField>