main/default/objects/Facility__c/fields/No_of_workers__c.field-meta.xml
<CustomField>
    <fullName>No_of_workers__c</fullName>
    <description>Number of workers</description>
    <inlineHelpText>Number of workers</inlineHelpText>
    <label>No of workers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>