main/default/objects/Facility__c/fields/On_Site_Investigation_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Investigation_Not_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On site investigation not completed</description>
    <inlineHelpText>Audit Group  = ON SITE INVESTIGATION and
facility status = DELISTED or ACTIVE  and
audit date = BLANK</inlineHelpText>
    <label>On Site Investigation Not Completed</label>
    <type>Checkbox</type>
</CustomField>