main/default/objects/Facility__c/fields/Overall_Risk__c.field-meta.xml
<CustomField>
    <fullName>Overall_Risk__c</fullName>
    <description>Overall Risk</description>
    <inlineHelpText>Overall Risk</inlineHelpText>
    <label>Overall Risk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>