main/default/objects/Facility__c/fields/Past_Audit_Deadline_FS__c.field-meta.xml
<CustomField>
    <fullName>Past_Audit_Deadline_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Past Audit Deadline (FS)</description>
    <inlineHelpText>Audit Group = PERIODIC FS and
Factory Status  = ACTIVE and
Audit Date = NOT BLANK and
Audit Date &lt; TODAY()-365*3 and
FS Audit Required = NOT BLANK</inlineHelpText>
    <label>Past Audit Deadline (FS)</label>
    <type>Checkbox</type>
</CustomField>