main/default/objects/Facility__c/fields/Past_Audit_Deadline_WCA__c.field-meta.xml
<CustomField>
    <fullName>Past_Audit_Deadline_WCA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Past Audit Deadline (WCA)</description>
    <inlineHelpText>Audit Group = ANNUAL WCA and
Factory Status  = ACTIVE and
Audit Date &lt; TODAY()-365 and
Audit date = NOT BLANK</inlineHelpText>
    <label>Past Audit Deadline (WCA)</label>
    <type>Checkbox</type>
</CustomField>