main/default/objects/Facility__c/fields/Past_CAPA_Deadline_FS__c.field-meta.xml
<CustomField>
    <fullName>Past_CAPA_Deadline_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Past CAPA Deadline (FS)</description>
    <inlineHelpText>Past CAPA Deadline (FS)
Audit Group  = FS FOLLOW UP and
Factory Status = ACTIVE and
Audit Date = BLANK and
CAPA Due Date  &lt; TODAY() (DUE DATE a result of selecting 1/3/6 months) and
FS Audit Required  = NOT BLANK</inlineHelpText>
    <label>Past CAPA Deadline (FS)</label>
    <type>Checkbox</type>
</CustomField>