main/default/objects/Facility__c/fields/Past_CAPA_Deadline_WCA__c.field-meta.xml
<CustomField>
    <fullName>Past_CAPA_Deadline_WCA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Past CAPA Deadline (WCA)</description>
    <inlineHelpText>Past CAPA Deadline (WCA)
Audit Group  = WCA FOLLOW UP and
Factory Status = ACTIVE and
Audit Date = BLANK and
CAPA Due Date  &lt; TODAY() (DUE DATE a result of selecting 1/3/6 months) and</inlineHelpText>
    <label>Past CAPA Deadline (WCA)</label>
    <type>Checkbox</type>
</CustomField>