main/default/objects/Facility__c/fields/Pending_CAPA_FS__c.field-meta.xml
<CustomField>
    <fullName>Pending_CAPA_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pending CAPA (FS)</description>
    <inlineHelpText>Audit Group = FS FOLLOW UP and
FACTORY STATUS = ACTIVE and
Audit Date = BLANK and
CAPA Due Date >= TODAY() and
FS Audi Required = NOT BLANK</inlineHelpText>
    <label>Pending CAPA (FS)</label>
    <type>Checkbox</type>
</CustomField>