main/default/objects/Facility__c/fields/Pending_CAPA_WCA__c.field-meta.xml
<CustomField>
    <fullName>Pending_CAPA_WCA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pending CAPA (WCA)</description>
    <inlineHelpText>Audit Group = WCA FOLLOW UP and
Factory Status  = ACTIVE and
Audit Date = BLANK and
CAPA Due Date >= TODAY()</inlineHelpText>
    <label>Pending CAPA (WCA)</label>
    <type>Checkbox</type>
</CustomField>