main/default/objects/Facility__c/fields/Prev_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Prev_Facility_Name__c</fullName>
    <description>Previous Facility Name</description>
    <inlineHelpText>Previous Facility Name</inlineHelpText>
    <label>Prev Facility Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>