main/default/objects/Facility__c/fields/RegionName__c.field-meta.xml
<CustomField>
    <fullName>RegionName__c</fullName>
    <formula>Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RegionName</label>
    <type>Text</type>
</CustomField>