main/default/objects/Facility__c/fields/Remove_from_Green_List_Due_to_WCA__c.field-meta.xml
<CustomField>
    <fullName>Remove_from_Green_List_Due_to_WCA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remove from Green List (Due to WCA)</description>
    <inlineHelpText>Remove from Green List (Due to WCA)</inlineHelpText>
    <label>Remove from Green List (Due to WCA)</label>
    <type>Checkbox</type>
</CustomField>