main/default/objects/Facility__c/fields/Removed_from_Green_List_Due_to_FS__c.field-meta.xml
<CustomField>
    <fullName>Removed_from_Green_List_Due_to_FS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removed from Green List (Due to FS)</description>
    <inlineHelpText>Removed from Green List (Due to FS)</inlineHelpText>
    <label>Removed from Green List (Due to FS)</label>
    <type>Checkbox</type>
</CustomField>