main/default/objects/Facility__c/fields/Removed_from_Green_List_Due_to_FS_CAPA__c.field-meta.xml
<CustomField>
    <fullName>Removed_from_Green_List_Due_to_FS_CAPA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removed from Green List (Due to FS CAPA)</description>
    <inlineHelpText>Removed from Green List (Due to FS CAPA)</inlineHelpText>
    <label>Removed from Green List (Due to FS CAPA)</label>
    <type>Checkbox</type>
</CustomField>