main/default/objects/Facility__c/fields/Removed_from_Greenlist_Due_to_WCA_CAPA__c.field-meta.xml
<CustomField>
    <fullName>Removed_from_Greenlist_Due_to_WCA_CAPA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removed from Greenlist (Due to WCA CAPA)</description>
    <inlineHelpText>Removed from Greenlist (Due to WCA CAPA)</inlineHelpText>
    <label>Removed from Greenlist (Due to WCA CAPA)</label>
    <type>Checkbox</type>
</CustomField>